2004-09-05  Akagic Amila  <bono@linux.org.ba>

	* configure.in: Added 'bs' to ALL_LINGUAS.

2004-08-30  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.7.3

2004-08-16  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.7.2

2004-08-16  Davyd Madeley  <davyd@madeley.id.au>

	* screen-exec/*: Remove from CVS.

2004-08-16  Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added id to ALL_LINGUAS.
	* po/id.po: Added Indonesian translation done by Ahmad Riza H Nst <rizahnst@eriagempita.co.id>.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Removed reference to screen-exec
	* Makefile.am: Here too.
	* screen-exec/*: Remove cruft.
	* configure.in: Added nb to ALL_LINGUAS.

2004-08-14  Arafat Medini  <lumina@silverpen.de>

	configure.in: Updated faulty Arabic translation and added
	"ar" Arabic locale to ALL_LINGUAS.

2004-08-10  Davyd Madeley  <davyd@madeley.id.au>

	* po/POTFILES.in: Add:
	   - gkb-new/GNOME_KeyboardApplet_Factory.server.in.in
	   - gkb-new/descs.sun/presets.xml.in
	   - gkb-new/descs/SK__x.keyprop.desktop.in
	for translation.

2004-08-10  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: Require gnome-panel 2.7.x
	* accessx-status/GNOME_AccessxStatusApplet.server.in.in:
	* cdplayer/GNOME_CDPlayerApplet.server.in.in:
	* charpick/GNOME_CharpickerApplet.server.in.in:
	* drivemount/GNOME_DriveMountApplet.server.in.in:
	* geyes/GNOME_GeyesApplet.server.in.in:
	* gkb-new/GNOME_KeyboardApplet_Factory.server.in.in:
	* gswitchit/GNOME_KeyboardApplet.server.in.in:
	* gtik/GNOME_GtikApplet.server.in.in:
	* multiload/GNOME_MultiLoadApplet_Factory.server.in.in:
	* stickynotes/GNOME_StickyNotesApplet.server.in.in:
	* wireless/GNOME_Panel_WirelessApplet.server.in.in:
	* mixer/GNOME_MixerApplet.server.in.in:
	* battstat/GNOME_BattstatApplet.server.in.in:
	* gweather/GNOME_GWeatherApplet_Factory.server.in.in:
	* mailcheck/GNOME_MailcheckApplet_Factory.server.in.in: