@@ -606,4 +606,6 @@ stickynotes/docs/zh_TW/Makefile
 libgswitchit/Makefile
 libgswitchit/gswitchit.pc
 gswitchit/Makefile
+gswitchit/help/Makefile
+gswitchit/help/C/Makefile
 ])
