@@ -1,0 +1,7 @@
+docname = gswitchit
+lang = C
+omffile = gswitchit-C.omf
+entities = legal.xml
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
+
