@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <creator>docs@gnome.org (GNOME Documentation Project)</creator>
+    <maintainer>docs@gnome.org (GNOME Documentation Project</maintainer>
+    <title>Keyboard Indicator Applet Manual</title>
+    <date>2004-09-13</date>
+    <version identifier="2.8" date="2004-09-13"
+	     description="Initial revision for version 2.8"/>
+    <subject category="GNOME|Applets|Utility"/>
+    <description>User manual for the Keyboard Indicator applet</description>
+    <type>user's guide</type>
+    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
+    <identifier url="char-palette.xml"/>
+    <language code="C"/>
+    <relation seriesid="ba45ca86-0560-11d9-936c-b93f52abd21f"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Angela Boyle"/>
+  </resource>
+</omf>
