@@ -1,0 +1,246 @@
+<?xml version="1.0" encoding="UTF-8"?><!-- -*- indent-tabs-mode: nil -*- -->
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appletversion "2.8">
+  <!ENTITY manrevision "2.8">
+  <!ENTITY date "August 2004">
+  <!ENTITY applet "Keyboard Indicator">
+  <!ENTITY ug "GNOME Desktop User Guide">
+]>
+<!-- 
+(Do not remove this comment block.)
+Maintained by the GNOME Documentation Project
+http://developer.gnome.org/projects/gdp
+Template version: 2.0 beta
+Template last modified Feb 12, 2002
+-->
+
+<article id="index" lang="en">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
+<articleinfo> 
+  <title>&applet; Manual</title>       
+
+  <copyright> 
+    <year>2004</year>
+    <holder>Angela Boyle</holder> 
+  </copyright>
+  <copyright>
+    <year>2004</year>
+    <holder>Sergey Udaltsov</holder>
+  </copyright>
+  <!-- translators: uncomment this:
+       <copyright>
+       <year>2003</year>
+       <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+       </copyright>
+  -->
+
+  <publisher> 
+    <publishername>GNOME Documentation Project</publishername> 
+  </publisher> 
+
+  &legal;
+  <!-- This file  contains link to license for the documentation (GNU FDL), and 
+       other legal stuff such as "NO WARRANTY" statement. Please do not change 
+       any of this. -->
+
+  <authorgroup> 
+    <author> 
+      <firstname>Angela</firstname>
+      <surname>Boyle</surname> 
+      <email>aboyle@aboyle.com</email>
+    </author>
+    <author>
+      <firstname>Sergey</firstname>
+      <surname>Udaltsov</surname>
+      <email>svu@gnome.org</email>
+    </author>
+    <!-- This is appropriate place for other contributors: translators,
+         maintainers,  etc. Commented out by default.
+         <othercredit role="translator">
+         <firstname>Latin</firstname> 
+         <surname>Translator 1</surname> 
+         <affiliation> 
+         <orgname>Latin Translation Team</orgname> 
+         <address> <email>translator@gnome.org</email> </address> 
+         </affiliation>
+         <contrib>Latin translation</contrib>
+         </othercredit>
+    -->
+  </authorgroup>
+
+  <releaseinfo>This manual describes version &appletversion; of the
+  &applet; applet.</releaseinfo> 
+
+  <legalnotice> 
+    <title>Feedback</title> 
+    <para>To report a bug or make a suggestion regarding the &applet;
+    applet or this manual, follow the directions in the
+    <ulink url="ghelp:gnome-feedback" type="help">GNOME Feedback
+    Page</ulink>.</para>
+    <!-- Translators may also add here feedback address for translations -->
+  </legalnotice> 
+</articleinfo> 
+
+<indexterm> 
+  <primary>Keyboard Indicator</primary> 
+</indexterm>
+
+<sect1 id="gswitchit-applet-intro">
+  <title>Introduction</title>
+
+  <para><application>&applet;</application> indicates the active keyboard group.
+  The applet shows you which group you are currently using.  Aside from the
+  standard applet popup menu functions, the <application>&applet;</application>
+  applet popup menu allows you to launch the applet Preferences tool and to
+  switch between language groups.</para>
+
+  <para>To add <application>&applet;</application> to a panel,
+  right-click on the panel, then choose <guimenuitem>Add to
+  Panel</guimenuitem>.  Select <application>&applet;</application>
+  in the <application>Add to the panel</application> dialog, then
+  click <guibutton>OK</guibutton>.</para>
+
+  <para>To open the <guilabel>Keyboard Preferences</guilabel> dialog, choose
+  <guimenuitem>Open Keyboard Preferences</guimenuitem> in the applet popup
+  menu. You may need to go to this dialog to be able to configure the keyboard
+  (choose model, layouts, options, etc.). To view the help for
+  <guilabel>Keyboard Preferences</guilabel>, see
+  <ulink url="ghelp:user-guide#goscustperiph-2">Configuring Keyboard
+  Preferences</ulink>.</para>
+</sect1>
+
+<sect1 id="gswitchit-applet-switching">
+  <title>Switching Language</title>
+
+  <para>First, you must know that a group is a set of characters, whether it be
+  for a language or non-language-related set of characters, like a dvorak. Each
+  language may have more than one subset, and each subset is called a group.
+  There are many ways you can switch the group that you are using on your
+  keyboard.</para>
+
+  <variablelist>
+    <varlistentry>
+      <term>Mouse Click</term>
+      <listitem><para>You can switch between groups with a single click on the
+      applet's panel icon.  The groups switch in a cycle determined by the
+      current configuration.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>Popup Menu</term>
+      <listitem><para>To pick a specific group, select
+      <guisubmenu>Groups</guisubmenu> from the popup menu. From there,
+      choose the group you want to switch to.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>Keyboard</term>
+      <listitem><para>In <guilabel>Keyboard Preferences</guilabel>, you can set
+      which key that you would like to use to switch groups on your keyboard.
+      To bring up the <guilabel>Keyboard Preferences</guilabel> dialog, choose
+      <guimenuitem>Open Keyboard Preferences</guimenuitem> in the applet popup
+      menu.  For more information about <guilabel>Keyboard Preferences</guilabel>,
+      see <ulink url="ghelp:user-guide#goscustperiph-2">Configuring Keyboard
+      Preferences</ulink>.</para></listitem>
+    </varlistentry>
+  </variablelist>
+</sect1>
+
+<sect1 id="gswitchit-applet-prefs">
+  <title>Customizing Behavior</title>
+  <para>To customize the behavior of the <application>&applet;</application>
+  applet, select <guimenuitem>Preferences</guimenuitem> in the popup menu to
+  bring up the <guilabel>Keyboard Indicator Preferences</guilabel> dialog. All
+  the settings made in the <guilabel>Preferences</guilabel> tool become active
+  in the applet immediately after the <guibutton>Close</guibutton> button is
+  pressed.</para>
+  <note>
+    <title>Availability of Options</title>
+    <para>All settings from the <guilabel>Keyboard Preferences</guilabel>
+    work even without the applet, but all the settings in the applet
+    <guilabel>Keyboard Indicator Preferences</guilabel> are only working
+    when the applet is running.</para>
+  </note>
+  <variablelist>
+    <varlistentry>
+      <term><guibutton>Default group</guibutton></term>
+      <listitem><para>This drop-down box sets the group that will be used
+      on the creation of a new application window.  You can also choose the
+      entry <guimenuitem>Not Used</guimenuitem>, which means new windows will
+      use the currently active group.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><guibutton>Separate group for each window</guibutton></term>
+      <listitem><para>Selecting this option makes the applet keep and
+      process the active group independently for each application window
+      on the screen.  Note that this option is only available when the
+      applet is on the panel.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><guibutton>Save/restore indicators with group</guibutton></term>
+      <listitem>
+        <para>Selecting this option allows the applet to keep/process an
+        independent set of keyboard indicators  (Caps Lock, Num Lock, Scroll
+        Lock, etc.) for each application window on the screen. For example, if
+        your CapsLock is active in the OpenOffice window and not active in the
+        Evolution window, it is automatically restored when you switch between
+        these windows -- to the "On" state in the OpenOffice window and to the
+        "Off" state in the Evolution window. This setting is only enabled when
+        you have <guibutton>Separate group for each window</guibutton>
+        checked.</para>
+        <note><para>The above option can interfere with settings assigning
+        indicators to groups. For example, in the <guilabel>Layout
+        Options</guilabel> tab, there are options allowing to use NumLock
+        as indicator of group #2. So even if you have <guilabel>Save/restore
+        indicators</guilabel> unchecked (and <guilabel>Separate group for each
+        window</guilabel> checked), the NumLock will be restored along with the
+        group anyway.</para></note>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term><guilabel>Exclude from keyboard switching</guilabel></term>
+      <listitem><para>This option keeps you from switching off of the selected
+      group from the keyboard.  The number of entries corresponds to the number
+      of the groups enabled, so you can exclude each group
+      separately.</para></listitem>
+    </varlistentry>
+  </variablelist>
+</sect1>
+
+<sect1 id="gswitchit-applet-plugins">
+  <title>Plugins</title>        
+  <para>To open the <guilabel>Keyboard Indicator Plugins</guilabel> dialog,
+  select <guimenuitem>Plugins</guimenuitem> from the popup menu. Your current
+  plugins are shown in the <guilabel>Active plugins</guilabel> area.</para> 
+  <variablelist>
+    <varlistentry>
+      <term>Adding a New Plugin</term>
+      <listitem><para>Click <guibutton>Add</guibutton>. In the <guilabel>Add
+      Plugin</guilabel> window, select one of the plugins in the
+      <guilabel>Available plugins</guilabel> area and click the
+      <guibutton>OK</guibutton> button.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>Removing a Plugin</term>
+      <listitem><para>Select the plugin in the <guilabel>Active
+      plugins</guilabel> area that you do not want anymore and
+      click <guibutton>Remove</guibutton>.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>Moving Items in the Plugin List</term>
+      <listitem><para>To move items up and down the plugin list in the
+      <guilabel>Active plugins</guilabel> area, select the plugin you
+      want to move, and click <guibutton>Up</guibutton> or
+      <guibutton>Down</guibutton>.  You can use the arrows on the keyboard
+      to move the selection point up and down.</para></listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>Changing the Properties of a Plugin</term>
+      <listitem><para>To change the properties of the plugins,  select
+      the plugin you want and click <guibutton>Properties</guibutton>.
+      The properties vary for each plugin.</para></listitem>
+    </varlistentry>
+  </variablelist>
+</sect1>
+</article>
