@@ -1,3 +1,11 @@
+2004-09-13  Shaun McCance  <shaunm@gnome.org>
+
+	* help/C/Makefile.am:
+	* help/C/legal.xml:
+	* help/C/gswitchit-C.omf:
+	* help/C/gswitchit.xml:
+	- Added gswitchit docs from Angela Boyle
+
 2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Removed references to screen-exec.
