@@ -1,3 +1,8 @@
+2004-09-13  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Added gswitchit docs from Angela Boyle
+
 2004-09-05  Akagic Amila  <bono@linux.org.ba>
 
 	* configure.in: Added 'bs' to ALL_LINGUAS.
